# vimseo

./: .coveragerc  .pre-commit-config.yaml  .ruff.toml  404.html  CREDITS.md  README.md  changelog.html  contributing.html  credits.html  gen_ref_nav.py  index.html  licenses.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini  vimseo.env
_draft_design/: actors.rst  calibration.rst  plugins.html
_draft_design/plugins/: index.html
changelog/: index.html
contributing/: index.html
credits/: index.html
docs/: contributing.md
docs/_draft_design/: plugins.md
docs/explanations/: decision_making_support.md  model_validation.md
docs/explanations/asme2025/: abstract.md
docs/explanations/eccomas2024/: abstract.md
docs/explanations/model_integration/: model_integration.md
docs/explanations/paper_q1_2025/: paper.md
docs/how_to/: abaqus_model_integration.md  run_a_study.md
docs/how_to/parameter_space/: index.md  parameter_space.md
docs/references/: abaqus_wrapper.md  acronyms.md  component_based_model.md  materials.md  state_of_the_art.md
docs/references/materials/: index.md
docs/references/solution_verification/: solution_verification_method.md
docs/runnable_examples/01_models/: plot_BendingTestAnalytical_Cantilever.py  plot_BendingTestAnalytical_ThreePoints.py  plot_MockConvergence_Dummy.py  plot_MockCurvesXRange_Dummy.py  plot_MockCurves_Dummy.py  plot_MockModelFields_LC1.py  plot_MockModelPersistent_LC1.py  plot_MockModelWithMaterial_LC1.py  plot_MockModelWithMaterial_LC2.py  plot_MockModel_LC1.py  plot_MockModel_LC2.py
docs/runnable_examples/02_integrated_models/: plot_01_basic_usage.py  plot_02_visualize-model_result.py  plot_03_model_result_management.py  plot_041_post_processing_patch.py
docs/runnable_examples/03_verification_vs_data/: plot_bending_test_vs_data.py
docs/runnable_examples/04_verification_vs_model_from_parameter_space/: plot_bending_test_vs_analytical_from_parameter_space.py
docs/runnable_examples/06_validation_point/: plot_stochastic_validation_bending_test.py
docs/runnable_examples/07_validation_case/: plot_deterministic_validation_case_on_vectors.py  plot_deterministic_validation_case_straightbeammodel.py  plot_read_reference_data.py
docs/runnable_examples/08_calibration/: plot_01_calibration_on_scalars.py  plot_02_calibration_on_curves.py  plot_03_coupled_load_cases.py
docs/runnable_examples/09_sensitivity_analysis/: plot_example_SensitivityTool_StraightBeamModel.py
docs/runnable_examples/10_surrogate_modelling/: _plot_example_SurrogateTool_StraightBeamModel.py
docs/runnable_examples/11_uncertainty_quantification/: plot_01_uq.py
docs/tutorials/vvuq_study/: index.md  introduction.md
explanations/: decision_making_support.html  model_validation.html
explanations/asme2025/: abstract.html
explanations/asme2025/abstract/: index.html
explanations/decision_making_support/: index.html
explanations/eccomas2024/: abstract.html
explanations/eccomas2024/abstract/: index.html
explanations/model_integration/: model_integration.html
explanations/model_integration/model_integration/: index.html
explanations/model_validation/: index.html
explanations/paper_q1_2025/: paper.html
explanations/paper_q1_2025/paper/: index.html
how_to/: abaqus_model_integration.html  run_a_study.html
how_to/02_integrated_models/: BendingTestAnalytical_ThreePoints_cache.hdf
how_to/abaqus_model_integration/: index.html
how_to/parameter_space/: index.html  parameter_space.html
how_to/run_a_study/: index.html
licenses/: index.html
reference/: SUMMARY.html
reference/SUMMARY/: index.html
reference/vimseo/: api.html  index.html
references/: abaqus_wrapper.html  acronyms.html  component_based_model.html  materials.html  state_of_the_art.html
references/abaqus_wrapper/: index.html
references/acronyms/: index.html
references/component_based_model/: index.html
references/material/: eoms.html  index.html  plastic_voce.html  ta6v.html
references/materials/: index.html
references/solution_verification/: solution_verification_method.html
references/state_of_the_art/: index.html
requirements/: test-python3.10.txt  test-python3.11.txt  test-python3.12.txt
search/: search_index.json
src/vimseo/: .coveragerc  api.py
tests/config/: test_config.py
tests/core/: test_model.py
tests/problems/: test_solver_utilities.py
tests/workflow/: test_workflow.py
tutorials/vvuq_study/: index.html
(+493 files in other folders)
